# spin-shot-sandbox

./: .commitlintrc.json  .gitignore  .release-it.json  CHANGELOG.md  README.md  icon.icns  learn-spin-shot.ipynb  pyproject.toml
.husky/: commit-msg
src/: spinshots_app.py
